--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+## MySQL
+spring.datasource.url=jdbc:mysql://onezlinks.com:3306/shoppingcenter
+spring.datasource.username=root
+spring.datasource.password=
+
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
+
+spring.main.allow-bean-definition-overriding=true
