update sql account

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://onezlinks.com:3306/shoppingcenter
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://213.136.89.90:3306/shoppingcenter
+spring.datasource.username=shoppingcenter
+spring.datasource.password=shoppingcenter_sop
 
 #`hibernate_sequence' doesn't exist
 spring.jpa.hibernate.use-new-id-generator-mappings=false
