--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://213.136.89.90:3306/shoppingcenter
+spring.datasource.url=jdbc:mysql://213.136.89.90:3306/shoppingcenter?useTimezone=true&serverTimezone=GMT%2B7
 spring.datasource.username=shoppingcenter
 spring.datasource.password=shoppingcenter_sop
 
