--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "bootstrap": "^4.3.1",
     "firebase": "^7.2.1",
     "font-awesome": "^4.7.0",
+    "hover.css": "^2.3.2",
     "jquery": "^3.4.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
