--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-image-gallery": "^0.9.1",
     "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
