--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=shoppingcenter_sop
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # drop n create table, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-bean-definition-overriding=true
+
+security.oauth2.resource.token-info-uri=http://localhost:9002/oauth/check_token
