--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-bean-definition-overriding=true
 
-security.oauth2.resource.token-info-uri=http://localhost:9002/oauth/check_token
+security.oauth2.resource.token-info-uri=http://213.136.89.90:9002/oauth/check_token
