--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://213.136.89.90:3306/shoppingcenter?useTimezone=true&serverTimezone=GMT%2B7
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcenter?useTimezone=true&serverTimezone=GMT%2B7
 spring.datasource.username=shoppingcenter
 spring.datasource.password=shoppingcenter_sop
 
@@ -12,4 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-bean-definition-overriding=true
 
-security.oauth2.resource.token-info-uri=http://213.136.89.90:9002/oauth/check_token
+security.oauth2.resource.token-info-uri=http://localhost:9002/oauth/check_token
+
+spring.jmx.default-domain=shoppingcenter
