--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,14 @@
 	</parent>
 	<groupId>com.sop</groupId>
 	<artifactId>ShoppingCenter</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
+	<packaging>war</packaging>
 	<name>ShoppingCenter</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Shopping Center System</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>com.sop.ShoppingCenter.ShoppingCenterApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -31,6 +33,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -77,6 +85,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -84,6 +97,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.sop.ShoppingCenter.ShoppingCenterApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
